language JN: 2) data & variables

--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -101,21 +101,21 @@ In the European context, researchers focus on football matches to estimate the e
 \bigskip
 \section{Data}\label{sec_soc_ext:data} 
 % Description data
-The data set used for the analysis covers the time window 2011-2015 and contains regions in which professional football games take place. The analysis is carried out on the municipality level, the lowest territorial division in Germany. I combine various data sources in order to examine the impact of professional football games on violent behavior.
+The data set used for the analysis covers the time window from 2011 to 2015 and contains regions in which professional football games take place. The analysis is conducted at the municipality level, the smallest territorial division in Germany. I combine various data sources to examine the impact of professional football games on violent behavior.
 
 
 
-\subsection{Crime data}
-The crime data comes from the German Police Crime Statistics, which is provided by the Federal Criminal Police Office.\footnote{Many aspects of the data preparation are inspired by \cite{hener2019noise} who is using the same data to examine the causal effect of noise pollution on criminal activities.} It covers the universe of individuals that fall victim to a crime against their legally protected personal rights between 2011 and 2015. Yet, as the data is only reported after the end of police procedures, the data is truncated to the period from January 2011 to May 2015 to avoid any problems with lags between the occurrence of the crime and when it is reported. Besides, the months of June are excluded from the analysis as no games are played during that time of the year. The data includes next to the time and place (municipality level) of the crime, the crime type code, the victim's age and gender, characteristics of the assault execution (attempt/completed act, usage of a firearm, lone operator/crime was committed by a group) and information on the relationship between victim and suspect.\footnote{The relationship between victim and suspect is retrieved in two ways. On the one hand, this covers formal relationships (such as types of kin or acquaintances). On the other hand, this examines relationships in a spatial-social manner (for instance living in the same household, or being in an education or care context).} Roughly 40 percent of the victims are female, the average age is 32 years, and 40 percent of the victims haven't had any prior relationship with the suspect.
+\subsection{Crime Data}
+The crime data are derived from the German Police Crime Statistics, which are provided by the Federal Criminal Police Office.\footnote{Many aspects of the data preparation are inspired by \cite{hener2019noise} who uses the same data to examine the causal effect of noise pollution on criminal activities.} It includes the universe of individuals who were victim to a crime against their legally protected personal rights between 2011 and 2015. However, as the data are not reported until after police procedures are completed, only data from January 2011 to May 2015 are used to avoid problems with lags between the occurrence of the crime and the time of reporting. Besides, the month of June is excluded from the analysis as there are generally no matches during that time of the year. In addition to the time and place (municipality level) of the crime, the date include the crime type code, the victim's age and gender, information on how the attack was carried out (attempt/completed act, usage of a firearm, lone operator/crime was committed by a group) and information on the relationship between victim and suspect.\footnote{The relationship between victim and suspect is retrieved in two ways. On the one hand, formal relationships are recorded (such as types of kinship or acquaintance). On the other hand, relationships are defined in spatial-social terms (for instance living in the same household, or being in an educational or care relationship).} Roughly 40 percent of victims are female, the average age is 32 years, and 40 percent of the victims had no prior relationship with the suspect.
 % (up to the hour) 
 
 
 % crime - assault distribution over time
 \input{soc_ext_fig__assault_time_distribution_2014}
 
-The micro-data is aggregated to the municipality-day level and the main outcome, the assault rate, is defined as the number of assaults per million population. Assaults are defined as actions involving physical violence. For that purpose, I use the crime type code of `intentional simple bodily harm' (\textit{Vorsätzliche einfache Körperverletzung} § 223 StGB). There are roughly 120 types of criminal offenses in use (recorded in 6 digit codes), though the vast majority of the cases concentrate on only a handful of codes.\footnote{The top 10 of the most prevalent crime keys comprise more than 90 percent of the cases.} Figure \ref{fig_soc_ext:offense_types_distribution_2014} in the Appendix shows the distribution of cases per crime key for the twenty most common offense types in 2014. The intentional simple bodily injury is by far the most prevalent offense and it contributes to about 45 percent of all cases. The prevalence of the offense type and its association with aggression motivates the decision to have assaults in this definition as the main outcome variable.
+The micro-data is aggregated to the municipality-day level and the main outcome, the assault rate, is defined as the number of assaults per million population. Assaults are defined as actions involving physical violence. For that purpose, I use the crime type code `intentional simple bodily harm' (\textit{Vorsätzliche einfache Körperverletzung}, § 223 StGB). There are roughly 120 types of criminal offenses (recorded in 6 digit codes), with the vast majority of cases classified by only a handful of codes.\footnote{The top 10 of the most prevalent crime keys account for more than 90 percent of the cases.} Figure \ref{fig_soc_ext:offense_types_distribution_2014} in the Appendix shows the distribution of cases per crime key for the twenty most common offense types in 2014. The intentional simple bodily injury is by far the most common offense, contributing to about 45 percent of all cases. Due to its prevalence and its association with aggression, I choose this offense type as the main outcome variable in the analysis.
 
-Figure \ref{fig_soc_ext:assault_time_distribution_2014} shows the distribution of assaults over time. Panel A displays the variation of assaults per hour of the day.\footnote{Roughly 15 percent of the observations do not contain information on the hour. This does not entail any consequences for the main analysis, as I examine daily variation in the assault rate.} The number of assaults is increasing over the course of a day and peaks around midnight. In order to assign the cases that occur during the early hours to the day, in which they are rooted in, I define a day as running from 6:00 AM until 5:59 AM. Panel B shows the distribution of assaults across days of the week. There are relatively more assaults on Friday and Saturday, whereas the other days have assault rates that are somewhat smaller. Panel C shows that the number of assaults has a strong seasonal pattern with the highest value recorded in May and the smallest figure in August.\footnote{Panel C shows the number of assaults across months of the year while adjusting for the number of days per month.} Panel D confirms this impression by plotting the daily number of assaults. New year's eve is a particularly impressive outlier in this context.\footnote{Panels C and D are showing data for the year 2014 only. Appendix Figure \ref{fig_soc_ext:assault_year_distribution} shows the distribution per day for different years.}
+Figure \ref{fig_soc_ext:assault_time_distribution_2014} shows the distribution of assaults over time. Panel A displays the variation of assaults per hour of the day.\footnote{Roughly 15 percent of the observations do not contain hourly information. This has no consequences for the main analysis, as I examine daily variation in the assault rate.} The number of assaults increases during the day and peaks around midnight. To assign the cases that occur in the early morning hours to the day on which they originate, I define a day as beginning at 6:00\textsc{am} and ending at 5:59\textsc{am}. Panel B shows the distribution of assaults by day of the week. There are relatively more assaults on Fridays and Saturdays, whereas the other days exhibit slightly smaller assault rates. Panel C shows that the number of assaults has a strong seasonal pattern, with the highest value recorded in May and the smallest in August.\footnote{Panel C shows the monthly number of assaults while adjusting for the number of days per month.} Panel D confirms this impression by plotting the daily number of assaults. New Year's Eve is a particularly impressive outlier.\footnote{Panels C and D show data for the year 2014 only. Figure \ref{fig_soc_ext:assault_year_distribution} in the Appendix shows the distribution per day for different years.}
 
 % XXX per day roughly around 320 per day, peak on new year's eve, high on holidays (carneval) 
 
@@ -124,31 +124,31 @@ Figure \ref{fig_soc_ext:assault_time_distribution_2014} shows the distribution o
 
 
 
-\subsection{Football data}
-The data on football matches is self-collected and is obtained via web scraping from kicker.de and transfermarkt.de. It captures all matches that are carried out in the context of the first three leagues of the German football league system over the period January 2011 until May 2015. The data contains detailed match and table standing parameters, e.g. time and place of the match, attendance, pregame point difference, goals, penalties, cards, referee characteristics, among others. Furthermore, there is comprehensive information on the single teams; such as the size of the team, average age, market value, and the number of foreign players. The stadiums where the matches take place are geographically encoded and will \textit{activate} the treatment in the region in which the stadium is located. Figure \ref{fig_soc_ext:map_gem_stadiums_monitor_and_neighboring_regions} depicts a map with all 69 stadiums in the data set. 
+\subsection{Football Data}
+The data on football matches is self-collected and is obtained via web scraping from kicker.de and transfermarkt.de. All matches played in the first three leagues of the German football league system in the period from January 2011 until May 2015 are recorded. The data contains detailed match and table standings parameters, e.g. time and place of the match, number of spectators, pregame point difference, goals, penalties, cards, referee characteristics, among others. Furthermore, there is comprehensive information on the individual teams, such as team size, average age, market value, and the number of foreign players. The stadiums where the matches take place are geographically encoded. Figure \ref{fig_soc_ext:map_gem_stadiums_monitor_and_neighboring_regions} depicts a map with all 69 stadiums included in the data set.
 
 % XXX stadiums in which not at least a full season is played are excluded from the analysis.\footnote{This affects the stadiums in Lübeck (1), Reutlingen (12), Elversberg (14), and the Air-Berlin stadium in Dusseldorf (3). The number in parenthesis indicates the number of games that were held in that venue. This excludes 0.6 percent of all matches.}
 
 % Descriptives about football matches
 \input{soc_ext_fig__descriptives_matches_time_attendance}
 
-Figure \ref{fig_soc_ext:descriptives_matches_time_attendance} illustrates some insights into key variables. Panel A shows the number of matches per day of the week and league. The vast majority of the matches is taking place between Friday and Sunday. This is particularly true for the highest league, whereas lower leagues play occasionally on weekdays, too. Matches happening on weekdays are exclusively held in the evenings. In contrast, matches on weekends occur usually in the afternoon. The inclusion of day-of-week fixed effects in the baseline specification helps to account for the higher share of games played on weekends, which are associated with higher levels of criminal behavior. The number of spectators vary substantially across the three professional leagues, as depicted in Panel C. The \textit{Bundesliga} draws the highest attention with an average audience of 44,000 people per game, followed by the second league with an average 17,000 fans per match, and the lowest league attracts on average a bit less than 6,000 fans per game.
+Figure \ref{fig_soc_ext:descriptives_matches_time_attendance} illustrates insights into key variables. Panel A shows the number of matches per day of the week and league. The vast majority of matches takes place between Friday and Sunday. Games of the lower leagues occasionally also take place during the week. Such games are held only in the evenings. In contrast, matches on weekends usually take place in the afternoon. The inclusion of day-of-week fixed effects in the baseline specification helps to account for the higher share of games played on weekends, which are associated with higher levels of criminal behavior. Spectator number vary substantially across the three professional leagues, as depicted in Panel C. The \textit{Bundesliga} attracts the most spectators with an average of 44,000 viewers per game, followed by the second league with an average of 17,000 fans per match, and the lowest league attracts slightly less than 6,000 fans per game on average.
 
-When investigating channels of how football games may affect assaults, I exploit betting odds that were obtained via web scraping from oddsportal.com. The betting odds give an idea about pregame expectations. I translate the odds of the three game outcomes to probabilities, which are the inverse of the betting odds. The probabilities serve as good predictors for game outcomes, as it is shown in Appendix Figure \ref{fig_soc_ext:pregame_probability_spread_outcomes}.\footnote{Panel A of Figure \ref{fig_soc_ext:pregame_probability_spread_outcomes} shows the close relationship between the realized score differential and the probability spread. Panel B and C demonstrate that the probability of victory is increasing with higher values of the probability spread.}
+When investigating channels of how football games may affect assaults, I exploit betting odds obtained from oddsportal.com via web scraping. The betting odds give an idea of pregame expectations. I translate the odds of the three game outcomes to probabilities which are the inverse of the betting odds. The probabilities serve as suitable predictors for game outcomes, as shown in Appendix Figure \ref{fig_soc_ext:pregame_probability_spread_outcomes}.\footnote{Panel A of Figure \ref{fig_soc_ext:pregame_probability_spread_outcomes} shows the close relationship between the realized score differential and the probability spread. Panels B and C demonstrate that the probability of winning increases the higher the probability spread.}
 
 
-\subsection{Weather data}
-The weather data comes from Germany's National Meteorological Service (\textit{Deutscher Wetterdienst}). In order to construct the weather control variables, I use the sample of weather monitors, which measure relevant weather variables over the sample period.\footnote{I use the following weather variables as daily averages: the daily average, minimum and maximum air temperature, minimum ground temperature, vapor pressure, air pressure, cloud cover, air humidity, precipitation, sunshine duration, snow depth, and wind velocity.} From this set of monitors, I choose the weather monitor with the closest proximity to a stadium. The assigned monitor-stadium pairs can be found in Figure \ref{fig_soc_ext:map_gem_stadiums_monitor_and_neighboring_regions}. The quality of the matches between weather monitors and stadiums is high, as the average distance between stadiums and monitors is 15 kilometers.\footnote{The distribution of the distance of monitor-stadium pairs can be found in Appendix Figure \ref{fig_soc_ext:hist_distance_stadium_monitors}.} Few of the weather variables have missing data, which are filled by propagating the last valid observation forward to the next valid observation (i.e. forward fill).\footnote{The weather variables with missing data are (with the share of missing data in parenthesis): Cloud cover (<1.2 percent) and snow depth (<0.6 percent).}
+\subsection{Weather Data}
+The weather data is derived from Germany's National Meteorological Service (\textit{Deutscher Wetterdienst}). In order to construct the weather control variables, I use those weather monitors which measure the relevant weather variables in the sample period.\footnote{I use daily averages of the following weather variables: daily average, minimum and maximum air temperature, minimum ground temperature, vapor pressure, air pressure, cloud cover, air humidity, precipitation, hours of sunshine, snow depth, and wind velocity.} From this set of monitors, I choose the weather monitor with the closest proximity to a stadium. The assigned monitor-stadium pairs can be found in Figure \ref{fig_soc_ext:map_gem_stadiums_monitor_and_neighboring_regions}. There is a high quality of the matches between weather monitors and stadiums, as the average distance between stadiums and monitors is 15 kilometers.\footnote{The distribution of the distance of the monitor-stadium pairs can be found in Appendix Figure \ref{fig_soc_ext:hist_distance_stadium_monitors}.} Few of the weather variables have missing data, which are filled in by propagating forward from the last valid observation to the next valid observation (i.e. `forward fill').\footnote{The weather variables with missing data are (with the share of missing data in parenthesis): Cloud cover (<1.2 percent) and snow depth (<0.6 percent).}
 
 
 
 \subsection{Holidays}
-In order to capture any variation of the crime rate between ordinary and special days, I add controls for public and school holidays, which may differ on the state level.\footnote{The data for the school holidays comes from `The Standing Conference of the Ministers of Education and Cultural Affairs of the Länder in the Federal Republic of Germany' (\textit{Kultusminister Konferenz}). Data on public holidays are collected from \href{https://www.schulferien.org/deutschland/feiertage/}{https://www.schulferien.org/deutschland/feiertage/}.} Furthermore, I add a dummy variable for peculiar days (New Year's Eve and the days surrounding Carnival), which are not holidays, but certainly shift the crime rate anyways.
+In order to capture any variation in the crime rate between ordinary and special days, I add controls for public and school holidays, which may differ at the state level.\footnote{The data on school holidays come from `The Standing Conference of the Ministers of Education and Cultural Affairs of the Länder in the Federal Republic of Germany' (\textit{Kultusminister Konferenz}). The data on public holidays are collected from \href{https://www.schulferien.org/deutschland/feiertage/}{https://www.schulferien.org/deutschland/feiertage/}.} Furthermore, I add a dummy variable for peculiar days (New Year's Eve and the days surrounding Carnival), which are not holidays, yet certainly shift the crime rate.
 
 
 
 \subsection{Regional Database}
-The Federal Statistical Office and the statistical offices of the Länder provide a database of detailed statistics by various subject areas on a very granular spatial level. Thus, I am able to build a panel on the municipality-year level containing comprehensive information on topics such as territory, population, labor market, election results, housing, economic sectors, and public budgets. The information is used to construct weights for the regression analysis or to build assault rates. {\color{red}Furthermore, the plan for the future is to leverage the high dimensionality of the data in order to investigate treatment effect heterogeneity with the help of machine learning algorithms (e.g. by making use of causal forests).} 
+The Federal Statistical Office and the statistical offices of the Länder provide a database of detailed statistics by various subject areas at a very granular spatial level. Thus, I am able to create a panel at the municipality-year level containing comprehensive information on topics such as territory, population, labor market, election results, housing, economic sectors, and public budgets. The information is used to construct weights for the regression analysis or to determine assault rates. 
 
 
 
