--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -160,27 +160,27 @@ The Federal Statistical Office and the statistical offices of the Länder provid
 % IDENTIFICATION
 %--------------------------------------------------------------------
 \bigskip
-\section{Empirical strategy}\label{sec_soc_ext:empirical_strategy}
+\section{Empirical Strategy}\label{sec_soc_ext:empirical_strategy}
 
-In order to identify the causal effect of football matches on criminal behavior, I exploit within region variation over time. To be precise, I compare the regional assault rate on the game day to the expected assault level conditional on the day of the week, month, and year while additionally accounting for other possible confounding variation stemming from weather and holidays. In other words, the counterfactual regional assault rate (what would be expected on a game day in absence of the game), e.g. a Saturday in April 2012, is obtained by using the regional assault rate on other Saturdays in April 2012, where no games take place. %In other words, the regional assault rate on a given date without a game (say a Saturday in April 2012) serves as counterfactual for what would be expected on a game day (on a Saturday in April 2012) in absence of the game. 
+In order to identify the causal effect of football matches on criminal behavior, I exploit within-region variation over time. To be precise, I compare the regional assault rate on a game day to the expected assault level conditional on the day of the week, month, and year, while additionally accounting for other possible confounding variation due to weather and holidays. In other words, the counterfactual regional assault rate (what would be expected on a game day in absence of the game), e.g. a Saturday in April 2012, is obtained by using the regional assault rate on other Saturdays in April 2012 with no games scheduled. %In other words, the regional assault rate on a given date without a game (say a Saturday in April 2012) serves as counterfactual for what would be expected on a game day (on a Saturday in April 2012) in absence of the game. 
 
 
-The identification strategy is based on a generalized difference-in-differences approach to study the impact of a football match on violent behavior. Let Assaults$_{rdmy}$ denote the assault rate in region $r$, on day-of-the-week $d$, in month $m$ and year $y$. The assault rate is defined as the number of assaults per million population and is given by:
+The identification strategy is based on a generalized difference-in-differences approach to study the impact of football matches on violent behavior. Let Assaults$_{rdmy}$ denote the assault rate in region $r$, on day-of-the-week $d$, in month $m$ and year $y$. The assault rate is defined as the number of assaults per million population and is given by:
 
 \begin{align}
 \text{Assaults}_{rdmy} = \alpha + \beta\ (\text{Gameday}_{rdmy}) + \vartheta_r + \underbrace{\gamma_d + \eta_m + \theta_y}_{\text{date}_{dmy}} + \lambda \mathbf{X}_{rdmy} + \varepsilon_{rdmy}
 \label{eq_soc_ext:model}.
 \end{align}
 
-$\text{Gameday}_{rdmy}$ is a binary variable equal to unity when a home game takes place and zero otherwise. Region fixed effects $\vartheta_r$ capture time-invariant differences between regions and ensure that the identification is driven by within instead of between region variation over time. The vector $\text{date}_{dmy}$ contains fixed effects for day-of-the-week ($\gamma_d$), month ($\eta_m$), and year ($\theta_y$). This way, the model flexibly controls for day-of-week specific heterogeneity, seasonal effects, and long-run time trends. I expand on the baseline model by adding interactions of region fixed effects with all elements of $\text{date}_{dmy}$, i.e. region-by-day-of-week fixed effects, region-by-month fixed effects, and region-by-year fixed effects. The interactions account for systemic changes in the degree of violent behavior over the year for each region. The vector $\mathbf{X}_{rdmy}$ includes school and public holidays and weather controls.\footnote{Public holiday controls include binary variables (on the level of the Federal States) for All Saints, Ascension Day, Assumption Day, Christmas, Corpus Christi, Epiphany, Easter, German Unity Day, Good Friday, Labor Day, New Year, Penance Day, Pentecost, and Reformation Day. Moreover, it contains dummy variables for Carnival and New Year's Eve.\newline Weather controls (on the regional level) include average air temperature, maximum air temperature, minimum air temperature, minimum ground temperature, steam pressure, cloud cover, air pressure, humidity, average precipitation, sunshine duration, snow depth, and wind speed.} I compute two-way cluster-robust standard errors to capture arbitrary correlation at the region-year and year-month levels. Observations are weighted using population figures from the Federal Statistical Office.
+$\text{Gameday}_{rdmy}$ is a binary variable that equals one when there is a home game, and zero otherwise. Region fixed effects $\vartheta_r$ capture time-invariant differences between regions and ensure that the identification is driven by within instead of between region variation over time. The vector $\text{date}_{dmy}$ contains fixed effects for the day-of-the-week ($\gamma_d$), month ($\eta_m$), and year ($\theta_y$). This way, the model flexibly controls for day-of-week specific heterogeneity, seasonal effects, and long-run time trends. I expand the baseline model by adding interactions of region fixed effects with all elements of $\text{date}_{dmy}$, i.e. region-by-day-of-week fixed effects, region-by-month fixed effects, and region-by-year fixed effects. The interactions account for systemic changes in the degree of violent behavior over the year for each region. The vector $\mathbf{X}_{rdmy}$ includes school and public holidays and weather controls.\footnote{Public holiday controls include binary variables (at the level of the Federal States) for All Saints' Day, Ascension Day, Assumption Day, Christmas, Corpus Christi, Epiphany, Easter, German Unity Day, Good Friday, Labor Day, New Year's Day, Penance Day, Pentecost, and Reformation Day. Moreover, it contains dummy variables for Carnival and New Year's Eve.\newline Weather controls (at the regional level) include average air temperature, maximum air temperature, minimum air temperature, minimum ground temperature, steam pressure, cloud cover, air pressure, humidity, average precipitation, hours of sunshine, snow depth, and wind speed.} I compute two-way cluster-robust standard errors to capture arbitrary correlation at the region-year and year-month levels. Observations are weighted with the population figures from the Federal Statistical Office.
 
 
 % displacement effects - temporal & spatial
-The implicit assumption to interpret the parameter of interest $\beta$ as the causal effect of a home game on violent behavior is that the location and the time of a football match are orthogonal to the number of assaults, conditional on the covariates. However, displacement effects may pose a threat to identification. On the one hand, this refers to spatial displacement effects, which may occur when (violence-prone) populations come from distant regions to the game. On the other hand, this includes temporal displacement effects, which happen when assaults from neighboring days are shifted to the game day. In both cases, the parameter would overestimate the impact of a football match on violent behavior as the offense would have been committed anyway, but just at another time or in another place. To rule out the possibility that displacement effects pose a threat to the validity of the identification strategy, I investigate the effect of football games on neighboring regions and days surrounding game days in section \ref{sec_soc_ext: threats}. I find that the main results, an increase in violent behavior in regions where football games take place, are not neutralized by decreases in adjacent regions or on days surrounding game days.
+The implicit assumption for interpreting the parameter of interest $\beta$ as the causal effect of a home game on violent behavior is that the location and the time of a football match are orthogonal to the number of assaults, conditional on the covariates. However, displacement effects may pose a threat to identification. On the one hand, this refers to spatial displacement effects, which may occur when (violence-prone) people from distant regions visit a game. On the other hand, this includes temporal displacement effects, which happen when assaults are shifted from adjacent days to game days. In both cases, the parameter would overestimate the impact of a football match on violent behavior as the offense would have been committed regardless, but at a different time or place. To rule out the possibility that displacement effects compromise the validity of the identification strategy, I investigate the effect of football games on neighboring regions and on days adjacent to game days in section \ref{sec_soc_ext: threats}. I find that the main results, namely an increase in violent behavior in regions where football games take place, are not neutralized by a decrease in the number of assaults in surrounding regions or on days adjacent to game days.
 
 
 % control group problem - away games
-Given the setup of the empirical approach, there could be another threat to the validity of the identification strategy. By focusing on home games in the main analysis, the counterfactuals could potentially be biased downwards as days with away games are part of the control group. This control group problem might stem from the fact that violent fan groups travel with their team on away games and the assault rate in the home region might consequently decline. In order to alleviate this concern, I redo the analysis and differentiate between home and away games. When allowing for distinct effects for home and away games, I find that away games do not significantly affect the assault rate in the home region. 
+Given the design of the empirical approach, there could be another potential threat to the validity of the identification strategy. By focusing on home games in the main analysis, the counterfactuals may be biased downwards as days with away games are part of the control group. This control group problem may be due to violent fan groups traveling with their team to away games, potentially leading to a decline in the assault rate in the home region. To address this concern, I perform the analysis again, differentiating between home and away games. When considering distinct effects for home and away games, I find that away games do not significantly affect the assault rate in the home region. 
 
 
 
