language JN: 5) conclusion

--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -312,7 +312,7 @@ Due to the nonlinearity of the model, the coefficient in Table \ref{tab_soc_ext:
 
 
 % Placebo games
-\textbf{Placebo games.--} I estimate the impact of \textit{placebo games} on the assault rate to test whether the previous results are only due to chance.\footnote{Unfortunately, there are no offenses that can function as placebo outcomes. This is because most of the offenses covered in the PCS are potentially affected by football games.} The actual matches take place on about five percent of the days in the sample. To estimate the effect of placebo games, I drop the affected days with the actual matches and randomly assign dummy indicators with the same frequency of the real matches. Subsequently, I estimate the model as shown in equation \ref{eq_soc_ext:model}. This procedure is carried out 10,000 times and the results are shown in Figure \ref{fig_soc_ext:robustness_placebo_games}. Panel A displays the distribution of the coefficients. As expected, the coefficients are centered around zero. Panel B illustrates the distribution of the t-statistics. The red area below the kernel density indicates significant estimates for a significance level of $\alpha=0.05$. Panel C shows that with 10,000 iterations 6.57 percent of the estimates are significantly different from zero. At a significance level of $\alpha=0.01$, there are 3.06 percent significant estimates. The low levels of significant coefficients confirm that the previous results are not due to chance. 
+\textbf{Placebo games.--} I estimate the impact of \textit{placebo games} on the assault rate to test whether the previous results are only due to chance.\footnote{Unfortunately, there are no offenses that can function as placebo outcomes. This is because most of the offenses covered in the PCS are potentially affected by football games.} The actual matches take place on about five percent of the days in the sample. To estimate the effect of placebo games, I drop the affected days with the actual matches and randomly assign dummy indicators with the same frequency of the real matches. Subsequently, I estimate the model as shown in equation \ref{eq_soc_ext:model}. This procedure is carried out 10,000 times and the results are shown in Figure \ref{fig_soc_ext:robustness_placebo_games}. Panel A displays the distribution of the coefficients. As expected, the coefficients are centered around zero. Panel B illustrates the distribution of the t-statistics. The red area below the kernel density indicates significant estimates for a significance level of $\alpha=0.05$. Panel C shows that with 10,000 iterations, 6.57 percent of the estimates are significantly different from zero. At a significance level of $\alpha=0.01$, there are 3.06 percent significant estimates. The low levels of significant coefficients confirm that the previous results are not due to chance. 
 
 
 
@@ -334,11 +334,11 @@ Due to the nonlinearity of the model, the coefficient in Table \ref{tab_soc_ext:
 \section{Discussion and Conclusion}\label{sec_soc_ext:conclusion}
 
 % summary
-In this paper, I analyze the impact of professional football games on violent behavior. To estimate the causal effects of football games on physical assaults, I use a generalized difference-in-differences approach that exploits the variation in the timing of matches. I compare regional assault levels on days with and without matches conditional on the day of the week, month, and year while additionally accounting for potential confounding variation coming from weather and holidays. I match web-scraped information on 4,461 football matches with data on local assault rates, weather, holidays, and population figures to construct a panel at the municipality-day level over the period 2011-2015. I find that a home game increases the average assault rate by 21.5 percent. The victimization rates of males are driving the results and are particularly high for the age group 18-29 years. Besides, the impact is 
-larger for victims with no prior relationship to the suspect and completed offenses. There are no offsetting reductions in assaults on adjacent days to the matchday or in nearby regions. When investigating potential channels, I find no evidence that emotional cues are responsible for the spike of assaults on matchdays. Although there is no support for the frustration-aggression hypothesis, I find large effects for prominent games and teams. In fact, this set of results is suggestive for the fact that spectators mimic players' behavior, select into specific matches, or that the pure agglomeration of fans is causing the higher level of assaults on game days. 
+In this paper, I analyze the impact of professional football games on violent behavior. To estimate the causal effects of football games on physical assaults, I use a generalized difference-in-differences approach that exploits variation in the timing of matches. I compare regional assault rates on days with and without matches, conditional on the day of the week, month, and year while additionally accounting for potential confounding variation coming from weather and holidays. I match web-scraped information on 4,461 football matches with data on local assault rates, weather, holidays, and population figures to construct a panel at the municipality-day level for the period 2011-2015. I find that a home game increases the average assault rate by 21.5 percent. Male victimization rates drive the results and are particularly high for the 18-29 age group. Besides, the the effects are larger for victims with no prior relationship to the suspect and for completed offenses. There are no offsetting reductions in assault rates on days adjacent to game days or in nearby regions. In examining potential channels, I find no evidence that emotional cues are responsible for the increase in assaults on match days. Although there is no evidence supporting the frustration-aggression hypothesis, I find large effects for prominent games and teams. In fact, this set of results suggests that spectators mimic player behavior, select into specific matches, or that the mere agglomeration of fans leads to an increase in the assault rates on game days. 
 
 
 
 
 % policy perspective
-I find the external effects of football games on violent behavior to be large in magnitude and economically relevant. For instance, professional football games explain 17.7 percent of all assault reports in the regions hosting a professional football club. Back-of-the-envelope calculations indicate that football games in the first three leagues of the German league system precipitate an additional 18,770 assaults in the season of 2014/15,\footnote{These calculations are based on an estimated reduction in assaults per million population per day, 335 days of the football season, and a population of 20,93 million in the affected regions. The number of prevented assaults for the season 2014/15 is: $2.677 \times 335 \times \frac{20,930,000}{1,000,000} = 18,770.$} which imply an annual social cost of 95 million euros.\footnote{To calculate the annual social cost, I use an estimated cost of 5,067 euros (in 2020 prices) for an assault \citep{glaubitz2016kostet}.} The \cite{coase1960problem} theorem states that market failures resulting from externalities can be solved without public intervention (here: the taxpayers do not have to pay for police operations), if there are clearly defined property rights, complete information, and low/no transaction costs. The question is whether the negative externalities would be internalized in absence of state action. To this end, the football clubs (i) must have an incentive to prevent violence in the context of the event and (ii) be able to implement the incentive effectively \citep{daumann2012}. Concerning the former, the clubs have a credible interest in maintaining a peaceful atmosphere otherwise fans, sponsors, and media might avoid the matches. Moreover, the clubs can either employ private security agencies or reimburse police operations to effectively prevent violence in and around the stadiums. Therefore, it should be in the club's own interest to take over the funding of the security. Critics would argue that this procedure is incompatible with the constitution as public safety is a sovereign right and obligation. However, from an economic perspective, it helps to make a distinction between the premises of the football matches and the public domain when discussing the reimbursement of costs for police operations \citep{mause2020}. On the premises, a football match can be considered as a private good, for whose security consumers and producers should pay for.\footnote{The attendance of a football match can be regarded as a private good as both conditions of rivalry (every seat can only be sold once) and excludability (the host can deny entry to some individuals) are satisfied.} In contrast, the socialization of police costs is justifiable in the public domain as all members of the society benefit equally. This regulation, the assumption of police costs on the club's premises, is consistent with statutes in France, Switzerland, and Great Britain. From the point of view of welfare economics, you have to consider both positive and negative externalities and analyze whether football matches increases social welfare. Many positive effects generated by football matches are, however, not externalities in the strict sense as they have already been internalized.\footnote{Many economic agents have to pay a fee in order to be included in the value chain of professional football, such as television companies who pay fees to be allowed to broadcast the sporting events.} Therefore, an interesting point of future research is to assess all relevant externalities, positive and negative alike, and evaluate whether there is a positive social net utility coming from professional football games. 
+I find the external effects of football games on violent behavior to be large in magnitude and economically relevant. For instance, professional football games explain 17.7 percent of all assault reports in the regions in which professional football clubs are located. Back-of-the-envelope calculations indicate that football games in the top three leagues of the German league system precipitate an additional 18,770 assaults in the 2014/15 season,\footnote{These calculations are based on an estimated reduction in assaults per million population per day, 335 days of the football season, and a population of 20,93 million in the affected regions. The number of prevented assaults for the 2014/15 season is: $2.677 \times 335 \times \frac{20,930,000}{1,000,000} = 18,770.$} which translate into annual social cost of 95 million euros.\footnote{To calculate the annual social cost, I use an estimated cost of 5,067 euros (in 2020 prices) for one assault \citep{glaubitz2016kostet}.} The \cite{coase1960problem} theorem states that market failures resulting from externalities can be solved without public intervention (taxpayers do not have to pay for police operations) under the following conditions: clearly defined property rights, complete information, and low/no transaction costs. The question is whether the negative externalities would be internalized in absence of state action. To this end, the football clubs must (i) have an incentive to prevent violence at the events and (ii) be able to implement the incentive effectively \citep{daumann2012}. As for the former, the clubs have a credible interest in maintaining a peaceful atmosphere. Otherwise fans, sponsors, and media might choose to avoid the matches. Moreover, clubs can either employ private security companies or reimburse the costs of police operations to effectively prevent violence in and around the stadiums. Therefore, it should be in the clubs' own interest to provide funding for security. Critics might argue that this procedure is incompatible with the constitution, as public safety is a sovereign right and obligation. However, from an economic perspective, it is helpful to distinguish between stadium grounds and public space when discussing the reimbursement of costs for police operations \citep{mause2020}. On stadium grounds, a football match can be considered a private good.\footnote{The attendance of a football match can be regarded as a private good as both conditions of rivalry (each seat can only be sold once) and excludability (the host can deny some people access) are satisfied.} Accordingly, consumers and producers should pay to ensure security. In contrast, socialization of police costs is justifiable in the public domain as all members of the society benefit equally. This regulation, the assumption of police costs on the club premises, is consistent with the statutes in France, Switzerland, and Great Britain. From the point of view of welfare economics, both positive and negative externalities need to be considered and it must be analyzed whether football matches increase social welfare. However, many positive effects of football matches are not externalities in the strict sense as they have already been internalized.\footnote{Many economic agents have to pay a fee to be included in the value chain of professional football, such as television companies that pay fees to be allowed to broadcast the sporting events.} Therefore, an interesting task for future research is to assess all relevant externalities, positive and negative alike, and evaluate whether professional football games generate a positive social net utility. 
+
